deployment.yaml
# cribr-cicd\deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cribr-ns
  name: cribr-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cribr-app
  template:
    metadata:
      labels:
        app: cribr-app
    spec:
      automountServiceAccountToken: false
      containers:
        - name: cribr-container
          image: 493834426110.dkr.ecr.us-east-1.amazonaws.com/cribr-app-repo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
              ephemeral-storage: "512Mi"
            limits:
              memory: "512Mi"
              ephemeral-storage: "1Gi"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
