cribr-deployment-without-secrets.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cribr-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cribr-ns
  name: cribr-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cribr-app
  template:
    metadata:
      labels:
        app: cribr-app
    spec:
      containers:
        - name: cribr-container
          image: 493834426110.dkr.ecr.us-east-1.amazonaws.com/cribr-app-repo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: cribr-ns
  name: cribr-service
spec:
  type: NodePort
  selector:
    app: cribr-app
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: cribr-ns
  name: cribr-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:493834426110:certificate/3b80922c-7d46-41e9-937f-878285670beb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: app.cribr.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cribr-service
                port:
                  number: 3000
