cribr-ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: cribr-ns
  name: cribr-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:493834426110:certificate/3b80922c-7d46-41e9-937f-878285670beb   # Replace with your ACM certificate ARN
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: app.cribr.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cribr-service
                port:
                  number: 3000
